# nothing_bot

./: .bashrc  .gitignore  README.md
cartographer_code/cartographer_ros/cartographer_ros/src/: node_main.cpp
lidar/: CMakeLists.txt  package.xml
lidar/launch/: delta_lidar.launch.py
lidar/src/: client.cpp  node.cpp
linorobot2/linorobot2_base/config/: ekf.yaml
linorobot2/linorobot2_bringup/launch/: bringup.launch.py  lasers.launch.py
linorobot2/linorobot2_description/urdf/: 2wd_properties.urdf.xacro
linorobot2/linorobot2_navigation/config/: navigation.yaml
linorobot2/linorobot2_navigation/launch/: navigation.launch.py  slam.launch.py
linorobot2/linorobot2_navigation/maps/: 001map.pgm  001map.yaml
micro_ros_setup/scripts/: create_firmware_ws.sh  create_ws.sh
nav2_move/: nva2p.py  nva2p1.py
realsense-ros/: README.md
realsense-ros/realsense2_camera/: CMakeLists.txt
realsense-ros/realsense2_camera/launch/: rs_launch.py
robot_cartographer/: CMakeLists.txt  package.xml
robot_cartographer/config/: backpack_2d.lua  backpack_2d_localization.lua  lidar_2d.lua  lidar_2d_slam.lua  robot_2d.lua
robot_cartographer/launch/: cartographer.launch.py  demo_backpack_2d_localization.launch.py  slam.launch.py
robot_cartographer/maps/: 001map.pbstream  carto_map.pbstream  home.pbstream  ki.pbstream  lll_map.pgm  lll_map.yaml  mmmw.pbstream  mmp.pbstream  newnewmap.pbstream  o_map.pgm  o_map.yaml  oiu.pbstream  robot_map.pgm  robot_map.yaml  testt.pbstream  ui.pbstream  wsbi.pbstream
robot_cartographer/rviz/: LL.rviz  carto.rviz  nav2.rviz
robot_move/: basic.py  basicMove.py  getPose.py  grab.py  main.py  mainRuningProgm.py  mecanum_drive_control.py  mecanum_driver.py  motor_control.py  opencv_yolo.py  test.py  utils.py
robot_move/config/: classes.txt
ros2ui/: ros2ui.pro
(+4 files in other folders)
